--- a/client/src/app/components/public/login/login.component.html
+++ b/client/src/app/components/public/login/login.component.html
@@ -20,7 +20,7 @@
 				<button md-raised-button color="accent" class="login-button" (click)="login()">LOGIN</button>
 			</md-card-content>
 			<md-card-footer>
-				<div class="app-info unselectable">Version: 0.1.1</div>
+				<div class="app-info unselectable">Version: {{versionNumber}}</div>
 			</md-card-footer>
 		</md-card>
 	</div>
