--- a/client/src/app/components/unverified-data/unverified-data-set-list/unverified-data-set-list.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set-list/unverified-data-set-list.component.html
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 		<div class="data-table-scrollable-area">
-			<div *ngFor="let dataSet of paginatedUnverifiedDataSets" class="data-table-row">
+			<div *ngFor="let dataSet of paginatedData" class="data-table-row">
 				<div class="data-table-row-content flex-container" 
 					fxLayout="row" 
 					(click)="selectUnverifiedDataSet(dataSet)"
