--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -99,7 +99,7 @@
 						</a>
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex="13">
-						{{stringUtils.formatUserName(user)}}
+						{{StringUtils.formatUserName(user)}}
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex>
 						{{user.emailAddress}}
