--- a/client/src/app/components/exceedance/ime-number-list/ime-number-list.component.html
+++ b/client/src/app/components/exceedance/ime-number-list/ime-number-list.component.html
@@ -1,7 +1,7 @@
-<div style="height:calc(100% - 121px);"> <!-- Browser dependent. Test on multiple browserGroups before setting this value. -->
+<div style="height:calc(100% - 121px);"> <!-- Browser dependent. Test on multiple browsers before setting this value. -->
 	<div *ngIf="!isDataLoaded" class="loading-indicator-container">
 		<md-spinner class="loading-indicator-spinner"></md-spinner>
-		<div class="loading-indicator-message">Loading...</div>
+		<div class="loading-indicator-message">{{loadingMessage}}</div>
 	</div>
 	<div *ngIf="isDataLoaded" class="data-table-scrollable">
 		<div class="data-table-filter-container-row flex-container" fxLayout="row" fxLayoutAlign="end center">
@@ -14,6 +14,11 @@
 					[ngClass]="{'mat-input-container-error':!textFilterStatus.valid}">
 					<input mdInput placeholder="Search" [(ngModel)]="filters.text" (ngModelChange)="applyFilters()">
 				</md-input-container>
+				<md-select [(ngModel)]="filters.status" placeholder="Status" class="mat-select-inline flex-item" fxFlex="150px" (ngModelChange)="applyFilters()">
+					<!--<md-option *ngFor="let status of statusFilterChoices" [value]="status.value">
+						{{status.label}}
+					</md-option>-->
+				</md-select>
 			</div>
 			<button md-icon-button 
 				(click)="toggleFilters()" 
@@ -33,55 +38,89 @@
 			</button>
 		</div>
 		<div class="unselectable data-table-header-row flex-container" fxLayout="row">
-			<div class="data-table-first-column truncate flex-item" fxFlex="13.37" (click)="sortBy('name')">
+			<div class="data-table-first-column truncate flex-item" fxFlex (click)="sortBy('imeNumber')">
 				<span class="data-table-header-label-sortable" [ngClass]="{
-					'data-table-header-label-sorted':sort.current == 'name'}">
-					Group Name
+					'data-table-header-label-sorted':sort.current == 'imeNumber'}">
+					IME Number
 				</span>
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse':sort.reversed,
-					'data-table-header-sort-arrow-inactive':sort.current !== 'name'}">
+					'data-table-header-sort-arrow-inactive':sort.current !== 'imeNumber'}">
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex="69px" (click)="sortBy('userCount')">
+			<div class="data-table-column truncate flex-item" fxFlex>
+				<span class="data-table-header-label">Site</span>
+			</div>
+			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('monitoringPoint')">
 				<span class="data-table-header-label-sortable" [ngClass]="{
-					'data-table-header-label-sorted':sort.current == 'userCount'}">
-					Users
+					'data-table-header-label-sorted':sort.current == 'monitoringPoint'}">
+					Grid
 				</span>
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse':sort.reversed,
-					'data-table-header-sort-arrow-inactive':sort.current !== 'userCount'}">
+					'data-table-header-sort-arrow-inactive':sort.current !== 'monitoringPoint'}">
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex="69">
-				<span class="data-table-header-label">Description</span>
+			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('discoveryDate')">
+				<span class="data-table-header-label-sortable" [ngClass]="{
+					'data-table-header-label-sorted':sort.current == 'discoveryDate'}">
+					Discovery Date
+				</span>
+				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+					'data-table-header-sort-arrow-reverse':sort.reversed,
+					'data-table-header-sort-arrow-inactive':sort.current !== 'discoveryDate'}">
+					arrow_downward
+				</md-icon>
 			</div>
-			<div class="data-table-last-column truncate flex-item" fxFlex="40px" style="text-align:center;">
-				<span class="data-table-header-label">Delete</span>
+			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('initialReading')">
+				<span class="data-table-header-label-sortable" [ngClass]="{
+					'data-table-header-label-sorted':sort.current == 'initialReading'}">
+					Initial Reading
+				</span>
+				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+					'data-table-header-sort-arrow-reverse':sort.reversed,
+					'data-table-header-sort-arrow-inactive':sort.current !== 'initialReading'}">
+					arrow_downward
+				</md-icon>
+			</div>
+			<div class="data-table-column truncate flex-item" fxFlex>
+				<span class="data-table-header-label">Latest Reading</span>
+			</div>
+			<div class="data-table-last-column truncate flex-item" fxFlex>
+				<span class="data-table-header-label">Status</span>
 			</div>
 		</div>
 		<div class="data-table-scrollable-area">
-			<div *ngFor="let group of paginatedUserGroups" class="data-table-row">
+			<div *ngFor="let imeNumber of paginatedData" class="data-table-row">
 				<div class="data-table-row-content flex-container" 
 					fxLayout="row" 
-					(click)="selectUserGroup(group)"
-					(dblclick)="navigateToUserGroup(group)"
-					[ngClass]="{'data-table-row-content-active': group === selectedUserGroup}">
-					<div class="data-table-first-column truncate flex-item" fxFlex="13.37">
-						<a [routerLink]="group.id">
-							{{group.name}}
+					(click)="selectImeNumber(imeNumber)"
+					(dblclick)="navigateToImeNumber(imeNumber)"
+					[ngClass]="{'data-table-row-content-active': imeNumber === selectedImeNumber}">
+					<div class="data-table-first-column truncate flex-item" fxFlex>
+						<a [routerLink]="imeNumber.imeNumber">
+							{{imeNumber.imeNumber}}
 						</a>
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex="69px">
-						{{group.users.length}}
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{imeNumber.site}}
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex="69">
-						{{group.description}}
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{imeNumber.monitoringPoints}}
 					</div>
-					<div class="data-table-last-column flex-item" fxFlex="40px" style="text-align:center;">
-						<md-icon (click)="delete(group)" style="color:#F00;cursor:pointer;margin-top:-4px;">delete</md-icon>
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{imeNumber.imeData && imeNumber.imeData[0] ? DateTimeUtils.getDate(imeNumber.imeData[0].dateTime) : ''}}
+					</div>
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{imeNumber.imeData && imeNumber.imeData[0] ? imeNumber.imeData[0].methaneLevel : ''}}
+					</div>
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{imeNumber.imeData ? imeNumber.imeData[imeNumber.imeData.length - 1].methaneLevel : ''}}
+					</div>
+					<div class="data-table-last-column truncate flex-item" fxFlex>
+						{{imeNumber.status}}
 					</div>
 				</div>
 			</div>
