--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -194,7 +194,7 @@
 	<button md-fab (click)="consoleLog()" mdTooltip="Console Log" mdTooltipPosition="above" class="fab-action-button">
 		<md-icon>assignment</md-icon>
 	</button>
-	<button md-fab (click)="commit()" mdTooltip="Commit" mdTooltipPosition="above" class="fab-action-button">
+	<button md-fab (click)="commitAll()" mdTooltip="Commit" mdTooltipPosition="above" class="fab-action-button">
 		<md-icon>done</md-icon>
 	</button>
 	<button md-fab (click)="save()" mdTooltip="Save" mdTooltipPosition="above" class="fab-action-button">
