--- a/client/src/app/components/mobile/mobile-sync-selector/mobile-sync-selector.component.html
+++ b/client/src/app/components/mobile/mobile-sync-selector/mobile-sync-selector.component.html
@@ -1,16 +1,26 @@
 <div class="page-title">Select an Action</div>
 <div class="selector-cards-container flex-container" fxLayout="row" fxLayoutAlign="start start" fxLayoutWrap>
-	<div *ngFor="let link of links">
-		<div *ngIf="link.visible" class="selector-card-container flex-item" fxFlex="320px">
-			<div class="selector-card">
-				<img class="selector-card-img" [src]="link.img">
-				<div class="selector-card-title-container">
-					<div class="selector-card-title">{{link.title}}</div>
-					<div class="selector-card-subtitle">{{link.subtitle}}</div>
-				</div>
-				<div class="selector-card-action">
-					<button md-button [disabled]="link.disabled" [routerLink]="'../' + link.route.path">SELECT</button>
-				</div>
+	<div *ngIf="uploadCard.visible" class="selector-card-container flex-item" fxFlex="320px">
+		<div class="selector-card">
+			<img class="selector-card-img" [src]="uploadCard.img">
+			<div class="selector-card-title-container">
+				<div class="selector-card-title">{{uploadCard.title}}</div>
+				<div class="selector-card-subtitle">{{uploadCard.subtitle}}</div>
+			</div>
+			<div class="selector-card-action">
+				<button md-button [routerLink]="'../' + uploadCard.route.path">SELECT</button>
+			</div>
+		</div>
+	</div>
+	<div *ngIf="downloadCard.visible" class="selector-card-container flex-item" fxFlex="320px">
+		<div class="selector-card">
+			<img class="selector-card-img" [src]="downloadCard.img">
+			<div class="selector-card-title-container">
+				<div class="selector-card-title">{{downloadCard.title}}</div>
+				<div class="selector-card-subtitle">{{downloadCard.subtitle}}</div>
+			</div>
+			<div class="selector-card-action">
+				<button md-button (click)="download()">SELECT</button>
 			</div>
 		</div>
 	</div>
