added rounded corners to selector cards

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -448,11 +448,13 @@ md-toolbar-row {
 }
 
 .selector-card {
+	border-radius: 2px;
 	margin: 8px;
 	box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 .selector-card-img {
+	border-radius: 2px 2px 0 0;
 	width: 100%;
 }
 
