--- a/client/src/app/components/exceedance/exceedance-selector/exceedance-selector.component.html
+++ b/client/src/app/components/exceedance/exceedance-selector/exceedance-selector.component.html
@@ -1,4 +1,5 @@
-<div class="page-title">Select an Exceedance Type</div>
+<div class="page-title">Exceedance Types</div>
+<div class="page-subtitle">Select an exceedance type to log repairs and rechecks, and to download PDF summaries.</div>
 <div class="selector-cards-container flex-container" fxLayout="row" fxLayoutAlign="start start" fxLayoutWrap>
 	<div *ngFor="let card of cards">
 		<div *ngIf="card.visible" class="selector-card-container flex-item" fxFlex="320px">
