--- a/client/src/app/components/mobile/mobile-sync-selector/mobile-sync-selector.component.html
+++ b/client/src/app/components/mobile/mobile-sync-selector/mobile-sync-selector.component.html
@@ -1,4 +1,8 @@
-<div class="page-title">Select an Action</div>
+<div class="page-title">Mobile Data Sync</div>
+<div class="page-subtitle">
+	Sync data between the Android application and the web application. 
+	Data files exported from the Android application can be uploaded to the web application, and data files downloaded from the web application can be imported into the Android application.
+</div>
 <div class="selector-cards-container flex-container" fxLayout="row" fxLayoutAlign="start start" fxLayoutWrap>
 	<div *ngIf="uploadCard.visible" class="selector-card-container flex-item" fxFlex="320px">
 		<div class="selector-card">
