--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -1,57 +1,47 @@
 .dashboard-container {
-	padding: 32px 128px;
-	text-align: center;
+	padding: 24px 48px;
 }
 
 .dashboard-title {
-	margin-top: 32px;
-	font-size: 3.7rem;
+	font-size: 34px;
+    padding-bottom: 24px;
 }
 
-.dashboard-card-container {
-	margin: 16px 12px;
+.dashboard-logo {
+	width: 100%;
+	max-width: 240px;
+	padding-bottom: 24px;
 }
 
-.dashboard-main-card {
-	height: 300px;
+.dashboard-grid-item {
+	margin: 2px;
+	height: 280px;
+	outline: none;
+	pointer-events: all;
 }
 
-.dashboard-card {
-	height: 160px;
+.dashboard-grid-item-img {
+	width: 100%;
+	height: 100%;
 }
 
-.dashboard-card-title {
-	font-size: 1.337rem;
-	font-weight: 300;
-	padding: 12px 0;
-}
-
-.dashboard-main-title-text {
-	margin: 16px;
-}
-
-.dashboard-card-title-icon {
-	//font-size: 1.778rem;
-    position: relative;
-    top: 4px;
-    right: 4px;
-}
-
-.dashboard-main-card-title-icon {
-	font-size: 3rem;
+.dashboard-grid-item-text-area {
 	position: relative;
-    right: 16px;
-	margin: 24px 0 48px 0;
+	bottom: 72px;
+	width: calc(100% - 32px);
+	padding: 16px;
+	background: rgba(0,0,0,0.54);
+	color: rgba(255,255,255,0.87);
+	font-weight: 400;
+	font-size: 16px;
+	text-align: left;
+	line-height: 16px;
 }
 
-.dashboard-card-stat {
-	font-size: 1.5rem;
-}
-
-.dashboard-card-footer {
-	background: #E3E3E3;
-	font-size: 0.86rem;
-    font-weight: 500;
-    height: 50px;
-    padding-top: 19px;
+.dashboard-grid-item-subtext {
+	color: rgba(255,255,255,0.87);
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	padding-top: 4px;
 }
